fix: align sign up button - refs #257470

--- a/src/Newsletter/newsletterBlock.less
+++ b/src/Newsletter/newsletterBlock.less
@@ -81,7 +81,10 @@ body.with-newsletter-block {
 }
 
 .newsletterBlockButton {
+  display: flex !important;
   width: 150px;
+  align-items: center;
+  justify-content: center;
   border: 1px solid #f26119 !important;
   background: transparent !important;
   border-radius: 5px !important;
@@ -146,7 +149,6 @@ body.with-newsletter-block {
   .newsletterBlockButton {
     height: 35px;
     font-size: 15px;
-    text-align: center;
   }
 
   .newsletterBlockForm {
@@ -173,7 +175,6 @@ body.with-newsletter-block {
     width: 100px;
     height: 25px;
     padding: 0 !important;
-    text-align: center;
   }
 
   .newsletterBlockHeadline {
